--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -22,7 +22,7 @@ jobs:
 
     strategy:
       matrix:
-        php-version: [8.2, 8.3]
+        php-version: [8.4]
 
     name: PHP ${{ matrix.php-version }}
 
