pembuatan migration, model, dan seed sesuai rancangan ERD

--- a/.env.example
+++ b/.env.example
@@ -25,7 +25,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=timecoin
 DB_USERNAME=root
-DB_PASSWORD=p4rv1zk44n
+DB_PASSWORD=password
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
