--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -71,6 +71,9 @@ jobs:
       - name: Clear Config Cache
         run: php artisan config:clear
 
+      - name: Check Code Style
+        run: composer cs:check
+
       - name: Run Database Migrations
         env:
           DB_CONNECTION: mysql
