--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
     "require-dev": {
         "brianium/paratest": "^7.3",
         "fakerphp/faker": "^1.23",
+        "friendsofphp/php-cs-fixer": "^3.84",
         "laravel/pail": "^1.2.2",
         "laravel/pint": "^1.13",
         "laravel/sail": "^1.41",
@@ -58,7 +59,17 @@
         "test": [
             "@php artisan config:clear --ansi",
             "@php artisan test"
-        ]
+        ],
+        "lint": [
+            "@php artisan lint"
+        ],
+        "fix": [
+            "@php artisan lint:fix"
+        ],
+        "cs:fix": [
+            "php-cs-fixer fix"
+        ],
+        "cs:check": "php-cs-fixer fix --dry-run --stop-on-violation"
     },
     "extra": {
         "laravel": {
